Premières implémentations des requêtes aux médias
