# src/main/java/fr/univtln/cnam/bdd/groupe5/mediasdesalpes/entity/GenreEntity.java
@@ -1,0 +1,36 @@
+package fr.univtln.cnam.bdd.groupe5.mediasdesalpes.entity;
+
+import jakarta.persistence.Column;
+import jakarta.persistence.Entity;
+import jakarta.persistence.Id;
+import jakarta.persistence.Table;
+import jakarta.validation.constraints.Size;
+
+@Entity
+@Table(name = "genre")
+public class GenreEntity {
+    @Id
+    @Column(name = "idgenre", nullable = false)
+    private Integer id;
+
+    @Size(max = 255)
+    @Column(name = "designation")
+    private String designation;
+
+    public Integer getId() {
+        return id;
+    }
+
+    public void setId(Integer id) {
+        this.id = id;
+    }
+
+    public String getDesignation() {
+        return designation;
+    }
+
+    public void setDesignation(String designation) {
+        this.designation = designation;
+    }
+
+}
